--- a/P4 Group.ipynb
+++ b/P4 Group.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, re, html, joblib\n",
+    "import os, re, joblib\n",
     "import numpy as np, pandas as pd\n",
     "import matplotlib.pyplot as plt, seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
